// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snap - hooks | CONFIGURATION: default | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: default | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: default | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subm90LWltcG9ydGVkLjYxMzE1MzM1MQ=="
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy42MTMxNTMzNTE="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2subXVsdGlwbGUtdXNlcy44MzEzNzM2OTE="
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suc29tZS1zdXBwb3J0ZWQtdXNlLWNhc2VzLjYxMzE1MzM1MQ=="
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2sud2l0aC1jdXN0b20tcHJvcGVydGllcy4yOTgzODEwMjY3"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suZGVmYXVsdC42MTMxNTMzNTE="
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "base64" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmhvb2suaW1wb3J0LWFzLjk0MzQ4MDE0"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1381552078"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "2727763289"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "1582044257"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "3886431347"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "2567587270"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "murmur3" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "1318926594"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1381552078"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "2692672905"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "2727763289"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "1582044257"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1582044257"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "3886431347"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "2567587270"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: hashAlgorithm = "unknown" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "1318926594"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: relativeTo = "../" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests.__fixtures__" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = "tests/" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.not-imported.613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.hook.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.hook.multiple-uses.831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.some-supported-use-cases.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.hook.with-custom-properties.2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.hook.default.613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = /__fixtures__/ | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.hook.import-as.94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: removePrefix = true | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "94348014"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
var Component = function Component() {
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_not-imported_613153351"
        })
    });
};
export { };
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___hook_multiple-uses_613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___hook_multiple-uses_613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests___fixtures___hook_multiple-uses_831373691"
            })
        ]
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests___fixtures___hook_some-supported-use-cases_613153351"
    });
    return /*#__PURE__*/ _jsx("div", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_some-supported-use-cases_613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_some-supported-use-cases_613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | useIntl with different module source 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'gatsby-plugin-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var message = 'variable message';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(messages)
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests___fixtures___hook_with-custom-properties_2983810267"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | with useIntl hook imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component = function Component() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___hook_default_613153351"
        })
    });
};
"
`;

exports[`snap - hooks | CONFIGURATION: separator = "_" | with useIntl imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl as useI18n } from 'react-intl';
var Component = function Component() {
    var intl = useI18n();
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests___fixtures___hook_import-as_94348014"
        })
    });
};
"
`;
